# protocol-formatter

./: .gitignore  LICENSE  README.md  __main__.py  config.py  main.py  pyproject.toml  schema.py
configs/: style_guide.yaml
extractor/: __init__.py  llm_extractor.py  prompts.py  rule_extractor.py
parser/: __init__.py  doc_reader.py  docx_reader.py  utils.py
renderer/: node_renderer.py
renderer/templates/: lib.js  lib_comp.js  render.js
tests/: test_roundtrip.py
