[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protocol-formatter"
version = "0.1.0"
description = "Convert raw laboratory protocol documents into consistently formatted Word files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alon Douek", email = "" },
]
keywords = ["biology", "protocol", "docx", "laboratory", "formatting"]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "python-docx>=1.1",
    "loguru>=0.7",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[project.scripts]
protocol-formatter = "main:app"

[tool.hatch.build.targets.wheel]
packages = [
    ".",
    "parser",
    "extractor",
    "renderer",
    "configs",
]

[tool.hatch.build.targets.wheel.force-include]
"configs/style_guide.yaml"         = "configs/style_guide.yaml"
"renderer/templates/lib.js"        = "renderer/templates/lib.js"
"renderer/templates/lib_comp.js"   = "renderer/templates/lib_comp.js"
"renderer/templates/render.js"     = "renderer/templates/render.js"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
markers = [
    "renderer: tests requiring Node.js and the docx npm package",
    "ollama: tests requiring a running Ollama server with qwen2.5:14b pulled",
]

[tool.ruff]
line-length = 100
target-version = "py310"
