[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protocol-formatter"
version = "0.1.0"
description = "Convert raw laboratory protocol documents into consistently formatted Word files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alon Douek", email = "alon.douek@monash.edu" },
]
keywords = ["biology", "protocol", "docx", "laboratory", "formatting"]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "python-docx>=1.1",
    "loguru>=0.7",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[project.scripts]
# NOTE: "main:app" relies on hatch packaging "." as a top-level source root.
# This works with `pip install -e .` (recommended) and non-editable installs
# built by hatch. If the entry point fails to resolve in another build backend
# or environment, use `python -m protocol_formatter` as a fallback.
# See DEVNOTE-021 and DEVNOTE-023 (top-level name collision risk).
protocol-formatter = "main:app"

[tool.hatch.build.targets.wheel]
packages = [
    ".",
    "parser",
    "extractor",
    "renderer",
    "configs",
]

[tool.hatch.build.targets.wheel.force-include]
"configs/style_guide.yaml"         = "configs/style_guide.yaml"
"renderer/templates/lib.js"        = "renderer/templates/lib.js"
"renderer/templates/lib_comp.js"   = "renderer/templates/lib_comp.js"
"renderer/templates/render.js"     = "renderer/templates/render.js"
"__main__.py"                      = "__main__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
markers = [
    "renderer: tests requiring Node.js and the docx npm package",
    "ollama: tests requiring a running Ollama server with qwen2.5:14b pulled",
]

[tool.ruff]
line-length = 100
target-version = "py310"
